fout block to prevent shift

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 	src: local('Brygada 1918'),
 		url('../fonts/brygada-1918-v1-latin_cyrillic-700.woff2') format('woff2'),
 		url('../fonts/brygada-1918-v1-latin_cyrillic-700.woff') format('woff');
-	font-display: swap;
+	font-display: block;
 }
 
 :root {
